# tealeaf

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
tealeaf/: __init__.py  __version__.py  core.py  headers.py
tests/: test_tealeaf.py
