[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tealeaf"
version = "0.0.5"
authors = [
    { name="Jack Muskopf", email="jam.muskopf@gmail.com" },
]
description = "An HTTP API client for readable code"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jackmuskopf/tealeaf"
"Bug Tracker" = "https://github.com/jackmuskopf/tealeaf/issues"